--- a/Diabetes_Prediction.ipynb
+++ b/Diabetes_Prediction.ipynb
@@ -53,7 +53,7 @@
       "cell_type": "code",
       "source": [
         "#loading the diabetes dataset to a pandas DataFrame\n",
-        "diabetes_dataset = pd.read_csv('/content/diabetes.csv') "
+        "diabetes_dataset = pd.read_csv('Datasets/diabetes.csv') "
       ],
       "metadata": {
         "id": "jY6rMENfFzxi"
